syntax = "proto3";
package api;

// The api service
service Api {
  // Get a balance of a user
  rpc GetBalance(BalanceRequest) returns (BalanceReply);

  // Sends a ping
  rpc SendPing (PingRequest) returns (PingReply);

  // Add a transaction to the pending transactions
  // Return pending transaction count
  rpc SendTx (TxItem) returns (SendTxReply);

  // Return a list of pending transactions
  rpc PendingTxs(Empty) returns(PendingTxsReply);

  // Mine a block with transactions (may be empty)
  rpc Mine(MineRequest) returns(MineReply);

  // Find txs where from or to equals a given id
  rpc FindTxs(FindTxsRequest) returns(FindTxsReply);
}

message FindTxsRequest {
  // id that should match from or to block
  string id = 1;
}

message FindTxsReply {
  repeated TxItem queue = 1;
}

message MineRequest{
  // id of the miner
  string id = 1;
}

message MineReply {
  // new amount of the miner
  int64 amount = 1;

  // the index of mined block
  int64 index = 2;
}

message TxItem {
  string from = 1;
  string to = 2;
  int64 amount = 3;
}

// The pending queue that should be mined
message PendingTxsReply {
  repeated TxItem queue = 1;
}

message SendTxReply {
  int64 pending = 1;
}

// The balance request containing user's id
message BalanceRequest {
  string id = 1;
}

// The balance response containing amount of money
message BalanceReply {
  int64 amount = 1;
}

// The ping request message containing the user's name.
message PingRequest {
  string name = 1;
}

// The response message containing the pong response
message PingReply {
  string message = 1;
}

message Empty {}